<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:text="Signup"
        android:textColor="#fc0303"
        android:textSize="30dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:text="confirm\npassword: "
            android:textColor="#000000"
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="150dp"
            style="@style/PlayButtonStyle"

            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="150dp"
            style="@style/PlayButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>