<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- User Profile Button -->
    <ImageButton
        android:id="@+id/user_profile_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="User Profile"
        android:scaleType="centerInside"
        android:src="@drawable/catsquare" />

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@id/user_profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="App Logo"
        android:scaleType="fitCenter"
        android:src="@drawable/campanile" />

    <!-- Play Button -->
    <Button
        android:id="@+id/play_button"
        style="@style/PlayButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="Play"
        android:textSize="18sp" />

    <!-- Chat Button -->
    <Button
        android:id="@+id/chat_button"
        style="@style/PlayButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_button"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="Chat"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <!-- Stats Button -->
    <Button
        android:id="@+id/stats_button"
        style="@style/PlayButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_button"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="Stats"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <!-- Leaderboard Button -->
    <Button
        android:id="@+id/leaderboard_button"
        style="@style/PlayButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_button"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="Leaderboard"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_profile_button"
        style="@style/PlayButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderboard_button"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="Edit Profile"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:text="TextView"
        android:textSize="20sp" />

</RelativeLayout>
